// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextFrameHelpers > Extract images > extractImagesFromLayouts() 1`] = `
[
  {
    "format": {
      "height": 297,
      "id": "A4_PORTRAIT",
      "orientation": "portrait",
      "width": 210,
    },
    "id": "test-layout-1",
    "name": "Sample layout",
    "textFrames": [
      {
        "content": [
          {
            "text": "Hello",
          },
          {
            "children": [
              {
                "text": "",
              },
            ],
            "size": 1,
            "type": "image",
            "url": "/images/image-###-FAKE-NANOID-###",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "text": "",
                              },
                            ],
                            "size": 2,
                            "type": "image",
                            "url": "/images/image-###-FAKE-NANOID-###",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "table-cell",
                  },
                ],
                "type": "table-row",
              },
            ],
            "type": "table",
          },
        ],
        "id": "test-frame-1",
        "position": {
          "x": 100,
          "y": 200,
        },
        "size": {
          "height": 400,
          "width": 300,
        },
        "style": {
          "background": "#FFFFFF",
          "withBorders": true,
          "withShadows": true,
        },
      },
      {
        "content": [
          {
            "text": "Hello 2",
          },
          {
            "text": "Hello 3",
          },
        ],
        "id": "test-frame-2",
        "position": {
          "x": 500,
          "y": 600,
        },
        "size": {
          "height": 800,
          "width": 700,
        },
        "style": {
          "background": "#FFFFFF",
          "withBorders": true,
          "withShadows": true,
        },
      },
    ],
    "view": {
      "center": [
        1.5,
        45.4,
      ],
      "projection": {
        "name": "EPSG:3857",
      },
      "resolution": 1000,
      "rotation": 0,
    },
  },
  {
    "format": {
      "height": 297,
      "id": "A4_PORTRAIT",
      "orientation": "portrait",
      "width": 210,
    },
    "id": "test-layout-2",
    "name": "Sample layout",
    "textFrames": [
      {
        "content": [
          {
            "text": "Hello",
          },
          {
            "children": [
              {
                "text": "",
              },
            ],
            "size": 1,
            "type": "image",
            "url": "/images/image-###-FAKE-NANOID-###",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "text": "",
                              },
                            ],
                            "size": 2,
                            "type": "image",
                            "url": "/images/image-###-FAKE-NANOID-###",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "table-cell",
                  },
                ],
                "type": "table-row",
              },
            ],
            "type": "table",
          },
        ],
        "id": "test-frame-1",
        "position": {
          "x": 100,
          "y": 200,
        },
        "size": {
          "height": 400,
          "width": 300,
        },
        "style": {
          "background": "#FFFFFF",
          "withBorders": true,
          "withShadows": true,
        },
      },
    ],
    "view": {
      "center": [
        1.5,
        45.4,
      ],
      "projection": {
        "name": "EPSG:3857",
      },
      "resolution": 1000,
      "rotation": 0,
    },
  },
]
`;

exports[`TextFrameHelpers > Extract images > extractImagesFromSharedViews() 1`] = `
[
  {
    "id": "test-shared-view-1",
    "layers": [],
    "scale": {
      "x": 30,
      "y": 100,
    },
    "textFrames": [
      {
        "content": [
          {
            "text": "Hello",
          },
          {
            "children": [
              {
                "text": "",
              },
            ],
            "size": 1,
            "type": "image",
            "url": "/images/image-###-FAKE-NANOID-###",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "text": "",
                              },
                            ],
                            "size": 2,
                            "type": "image",
                            "url": "/images/image-###-FAKE-NANOID-###",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "table-cell",
                  },
                ],
                "type": "table-row",
              },
            ],
            "type": "table",
          },
        ],
        "id": "test-frame-1",
        "position": {
          "x": 100,
          "y": 200,
        },
        "size": {
          "height": 400,
          "width": 300,
        },
        "style": {
          "background": "#FFFFFF",
          "withBorders": true,
          "withShadows": true,
        },
      },
      {
        "content": [
          {
            "text": "Hello 2",
          },
          {
            "text": "Hello 3",
          },
        ],
        "id": "test-frame-2",
        "position": {
          "x": 500,
          "y": 600,
        },
        "size": {
          "height": 800,
          "width": 700,
        },
        "style": {
          "background": "#FFFFFF",
          "withBorders": true,
          "withShadows": true,
        },
      },
    ],
    "title": "Sample layout",
    "view": {
      "center": [
        1.5,
        45.4,
      ],
      "projection": {
        "name": "EPSG:3857",
      },
      "resolution": 1000,
      "rotation": 0,
    },
  },
  {
    "id": "test-shared-view-2",
    "layers": [],
    "scale": {
      "x": 30,
      "y": 100,
    },
    "textFrames": [
      {
        "content": [
          {
            "text": "Hello",
          },
          {
            "children": [
              {
                "text": "",
              },
            ],
            "size": 1,
            "type": "image",
            "url": "/images/image-###-FAKE-NANOID-###",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "text": "",
                              },
                            ],
                            "size": 2,
                            "type": "image",
                            "url": "/images/image-###-FAKE-NANOID-###",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "table-cell",
                  },
                ],
                "type": "table-row",
              },
            ],
            "type": "table",
          },
        ],
        "id": "test-frame-1",
        "position": {
          "x": 100,
          "y": 200,
        },
        "size": {
          "height": 400,
          "width": 300,
        },
        "style": {
          "background": "#FFFFFF",
          "withBorders": true,
          "withShadows": true,
        },
      },
    ],
    "title": "Sample layout",
    "view": {
      "center": [
        1.5,
        45.4,
      ],
      "projection": {
        "name": "EPSG:3857",
      },
      "resolution": 1000,
      "rotation": 0,
    },
  },
]
`;

exports[`TextFrameHelpers > Load images > loadImagesOfLayouts() 1`] = `
[
  {
    "format": {
      "height": 297,
      "id": "A4_PORTRAIT",
      "orientation": "portrait",
      "width": 210,
    },
    "id": "test-layout-1",
    "name": "Sample layout",
    "textFrames": [
      {
        "content": [
          {
            "text": "Hello",
          },
          {
            "children": [
              {
                "text": "",
              },
            ],
            "size": 1,
            "type": "image",
            "url": "http://blob:IMAGE_1",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "text": "",
                              },
                            ],
                            "size": 2,
                            "type": "image",
                            "url": "http://blob:IMAGE_2",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "table-cell",
                  },
                ],
                "type": "table-row",
              },
            ],
            "type": "table",
          },
        ],
        "id": "test-frame-1",
        "position": {
          "x": 100,
          "y": 200,
        },
        "size": {
          "height": 400,
          "width": 300,
        },
        "style": {
          "background": "#FFFFFF",
          "withBorders": true,
          "withShadows": true,
        },
      },
      {
        "content": [
          {
            "text": "Hello 2",
          },
          {
            "text": "Hello 3",
          },
        ],
        "id": "test-frame-2",
        "position": {
          "x": 500,
          "y": 600,
        },
        "size": {
          "height": 800,
          "width": 700,
        },
        "style": {
          "background": "#FFFFFF",
          "withBorders": true,
          "withShadows": true,
        },
      },
    ],
    "view": {
      "center": [
        1.5,
        45.4,
      ],
      "projection": {
        "name": "EPSG:3857",
      },
      "resolution": 1000,
      "rotation": 0,
    },
  },
  {
    "format": {
      "height": 297,
      "id": "A4_PORTRAIT",
      "orientation": "portrait",
      "width": 210,
    },
    "id": "test-layout-2",
    "name": "Sample layout",
    "textFrames": [
      {
        "content": [
          {
            "text": "Hello",
          },
          {
            "children": [
              {
                "text": "",
              },
            ],
            "size": 1,
            "type": "image",
            "url": "http://blob:IMAGE_1",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "text": "",
                              },
                            ],
                            "size": 2,
                            "type": "image",
                            "url": "http://blob:IMAGE_2",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "table-cell",
                  },
                ],
                "type": "table-row",
              },
            ],
            "type": "table",
          },
        ],
        "id": "test-frame-1",
        "position": {
          "x": 100,
          "y": 200,
        },
        "size": {
          "height": 400,
          "width": 300,
        },
        "style": {
          "background": "#FFFFFF",
          "withBorders": true,
          "withShadows": true,
        },
      },
    ],
    "view": {
      "center": [
        1.5,
        45.4,
      ],
      "projection": {
        "name": "EPSG:3857",
      },
      "resolution": 1000,
      "rotation": 0,
    },
  },
]
`;

exports[`TextFrameHelpers > Load images > loadImagesOfSharedViews() 1`] = `
[
  {
    "id": "test-shared-view-1",
    "layers": [],
    "scale": {
      "x": 30,
      "y": 100,
    },
    "textFrames": [
      {
        "content": [
          {
            "text": "Hello",
          },
          {
            "children": [
              {
                "text": "",
              },
            ],
            "size": 1,
            "type": "image",
            "url": "http://blob:IMAGE_1",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "text": "",
                              },
                            ],
                            "size": 2,
                            "type": "image",
                            "url": "http://blob:IMAGE_2",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "table-cell",
                  },
                ],
                "type": "table-row",
              },
            ],
            "type": "table",
          },
        ],
        "id": "test-frame-1",
        "position": {
          "x": 100,
          "y": 200,
        },
        "size": {
          "height": 400,
          "width": 300,
        },
        "style": {
          "background": "#FFFFFF",
          "withBorders": true,
          "withShadows": true,
        },
      },
      {
        "content": [
          {
            "text": "Hello 2",
          },
          {
            "text": "Hello 3",
          },
        ],
        "id": "test-frame-2",
        "position": {
          "x": 500,
          "y": 600,
        },
        "size": {
          "height": 800,
          "width": 700,
        },
        "style": {
          "background": "#FFFFFF",
          "withBorders": true,
          "withShadows": true,
        },
      },
    ],
    "title": "Sample layout",
    "view": {
      "center": [
        1.5,
        45.4,
      ],
      "projection": {
        "name": "EPSG:3857",
      },
      "resolution": 1000,
      "rotation": 0,
    },
  },
  {
    "id": "test-shared-view-2",
    "layers": [],
    "scale": {
      "x": 30,
      "y": 100,
    },
    "textFrames": [
      {
        "content": [
          {
            "text": "Hello",
          },
          {
            "children": [
              {
                "text": "",
              },
            ],
            "size": 1,
            "type": "image",
            "url": "http://blob:IMAGE_1",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "text": "",
                              },
                            ],
                            "size": 2,
                            "type": "image",
                            "url": "http://blob:IMAGE_2",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "table-cell",
                  },
                ],
                "type": "table-row",
              },
            ],
            "type": "table",
          },
        ],
        "id": "test-frame-1",
        "position": {
          "x": 100,
          "y": 200,
        },
        "size": {
          "height": 400,
          "width": 300,
        },
        "style": {
          "background": "#FFFFFF",
          "withBorders": true,
          "withShadows": true,
        },
      },
    ],
    "title": "Sample layout",
    "view": {
      "center": [
        1.5,
        45.4,
      ],
      "projection": {
        "name": "EPSG:3857",
      },
      "resolution": 1000,
      "rotation": 0,
    },
  },
]
`;
